<?xml version="1.0"?>

<!--
 SPDX-FileCopyrightText: Copyright (c) 2021-2022 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_vda5050_nav2_client_bringup</name>
  <version>0.20.0</version>
  <description>Vda5050 Messages</description>
  <maintainer email="rshao@nvidia.com">Renjie Shao</maintainer>
  <license>NVIDIA Isaac ROS Software License</license>

  <build_depend>isaac_ros_vda5050_nav2_client</build_depend>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_voxel_grid</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
